category added to plans
